// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with 1 expense 1`] = `
<div>
  <h1>
    Showing 
    1
     
    expense
     total is 
    $2.75
  </h1>
</div>
`;

exports[`should render expense summary with mulitple expense 1`] = `
<div>
  <h1>
    Showing 
    23
     
    expenses
     total is 
    $275,123,456.78
  </h1>
</div>
`;
